k8s/production/05-employees-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-api-deployment
  namespace: production
  labels:
    app: employees-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employees-api-pod
  template:
    metadata:
      labels:
        app: employees-api-pod
    spec:
      containers:
        - name: employees-api-container
          image: DOCKER_USER/employees-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
      restartPolicy: Always
