k8s/production/07-flights-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-api-deployment
  namespace: production
  labels:
    app: flights-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flights-api-pod
  template:
    metadata:
      labels:
        app: flights-api-pod
    spec:
      containers:
        - name: flights-api-container
          image: rgavira123/flights-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
      restartPolicy: Always
