k8s/production/11-search-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api-deployment
  namespace: production
  labels:
    app: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-api-pod
  template:
    metadata:
      labels:
        app: search-api-pod
    spec:
      containers:
        - name: search-api-container
          image: rgavira123/search-api:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
