k8s/production/06-employees-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employees-api
  namespace: production
  labels:
    app: employees-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: employees-api-pod
  type: NodePort
