k8s/production/10-spacemissions-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacemissions-api
  namespace: production
  labels:
    app: spacemissions-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spacemissions-api-pod
  type: ClusterIP
