k8s/production/12-search-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api
  namespace: production
  labels:
    app: search-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: search-api-pod
  type: ClusterIP
