k8s/production/15-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: production
  labels:
    app: frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend-pod
  type: ClusterIP
